--- a/policy.html
+++ b/policy.html
@@ -14,12 +14,9 @@
   <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
   <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
   <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="What We Do || OZ Design" />
-  <meta property="og:title" content="What We Do || OZ Design" />
-  <meta name="twitter:title" content="What We Do || OZ Design">
-  <meta name="description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment." />
-  <meta itemprop="description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment." />
-  <meta property="og:description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment." />
+  <meta itemprop="name" content="Refund & Privacy Policies || OZ Design" />
+  <meta property="og:title" content="Refund & Privacy Policies || OZ Design" />
+  <meta name="twitter:title" content="Refund & Privacy Policies || OZ Design">
   <meta itemprop="image" content="https://ozdesign.us/img/share-cover/services.jpg" />
   <meta property="og:image" content="https://ozdesign.us/img/share-cover/services.jpg" />
   <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/services.jpg" />
