--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>What We Do || OZ Design</title>
+  <title>Our Work || OZ Design</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css" media="screen">
 
@@ -14,9 +14,9 @@
   <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
   <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
   <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="What We Do || OZ Design" />
-  <meta property="og:title" content="What We Do || OZ Design" />
-  <meta name="twitter:title" content="What We Do || OZ Design">
+  <meta itemprop="name" content="Our Work || OZ Design" />
+  <meta property="og:title" content="Our Work || OZ Design" />
+  <meta name="twitter:title" content="Our Work || OZ Design">
   <meta name="description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences." />
   <meta itemprop="description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences." />
   <meta property="og:description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences." />
