edit contact email

--- a/portfolio-frontend.html
+++ b/portfolio-frontend.html
@@ -323,7 +323,7 @@
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">o@ozdesign.us</a>
+          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
         </div>
 
       </div>
