--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="css/styles.css" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="icon" href="https://ozdesign.us/img/favicon.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
   <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
