update github links

--- a/portfolio-frontend.html
+++ b/portfolio-frontend.html
@@ -74,7 +74,7 @@
     <div class="text-block">
       <h3>Grandstand</h3>
       <p>Full service sports and entertainment agency specializing in athlete representation, their management, and all surrounding business services our clients may need to excell in their career.</p>
-      <a href="https://www.behance.net/gallery/54287501/Onplan" target="_blank" class="button button--arrow">
+      <a href="https://github.com/OZ-Design/website/tree/master/portfolio-frontend/grandstand" target="_blank" class="button button--arrow">
         <span>View project on Github</span>
         <div class="button_icons">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
@@ -143,7 +143,7 @@
     <div class="text-block">
       <h3>Healthviber</h3>
       <p>Online Platform connecting Americans to their local Health Professionals.</p>
-      <a href="https://www.behance.net/gallery/54287501/Onplan" target="_blank" class="button button--arrow">
+      <a href="https://github.com/OZ-Design/website/tree/master/portfolio-frontend/healthviber" target="_blank" class="button button--arrow">
         <span>View project on Github</span>
         <div class="button_icons">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
