add google analytics

--- a/portfolio-operator.html
+++ b/portfolio-operator.html
@@ -164,6 +164,15 @@
     crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-90859140-2');
+  </script>
+
 </body>
 
 </html>
