--- a/contacts.html
+++ b/contacts.html
@@ -125,16 +125,16 @@
             <label>Don’t fill this out: <input name="bot-field"></label>
           </div>
           <div class="form_input">
-            <label>Name</label>
-            <input type="text" name="name" required>
+            <label for="name">Name</label>
+            <input id="name" type="text" name="name" required>
           </div>
           <div class="form_input">
-            <label>Email</label>
-            <input type="email" name="email" required>
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email" required>
           </div>
           <div class="form_input">
-            <label>Message</label>
-            <textarea name="message" cols="50" rows="5" required></textarea>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" cols="50" rows="5" required></textarea>
           </div>
           <button class="button form_button">
             <span>Send</span>
