add link to website

--- a/portfolio-worktimer.html
+++ b/portfolio-worktimer.html
@@ -73,6 +73,15 @@
     =================================-->
     <div class="text-block">
       <p>Work Timer is a time tracker that's built for speed and ease of use. Time logging with with it will be so simple that you’ll actually use it.</p>
+
+      <a href="https://work-timer.pro/" target="_blank" class="button button--arrow">
+        <span>Open website</span>
+        <div class="button_icons">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
+        </div>
+      </a>
+      
     </div>
     <!--====  End of Text Block  ====-->
 
