--- a/portfolio-logotypes.html
+++ b/portfolio-logotypes.html
@@ -43,7 +43,7 @@
       <ul class="main-menu">
         <li class="main-menu_item"><a href="services.html">What We Do</a></li>
         <li class="main-menu_item main-menu_item--active"><a href="portfolio.html">Our Work</a></li>
-        <li class="main-menu_item"><a href="products.html">Products</a></li>
+        <li class="main-menu_item main-menu_item--prefixed"><a href="products.html">Products</a></li>
         <li class="main-menu_item"><a href="contacts.html">Contact Us</a></li>
       </ul>
       <!--====  End of Menu  ====-->
@@ -201,7 +201,7 @@
       <div class="footer_column footer_column--bottom">
 
         <div class="footer_copy">
-          ©2017 OZ Design
+          ©2017 OZ Design.
           <br> All rights Reserved
         </div>
 
