--- a/product-patterns.html
+++ b/product-patterns.html
@@ -45,14 +45,14 @@
       <ul class="main-menu">
         <li class="main-menu_item"><a href="services.html">What We Do</a></li>
         <li class="main-menu_item"><a href="portfolio.html">Our Work</a></li>
-        <li class="main-menu_item main-menu_item--active"><a href="products.html">Products</a></li>
+        <li class="main-menu_item main-menu_item--prefixed main-menu_item--active"><a href="products.html">Products</a></li>
         <li class="main-menu_item"><a href="contacts.html">Contact Us</a></li>
       </ul>
       <!--====  End of Menu  ====-->
     </div>
   </header>
 
-  <div class="hero">
+  <div class="hero hero--short hero--long-header hero--mobile-high hero--cta">
     <div class="hero_content container">
       <div class="text--biggest">
         Largest collection <br> of geometric customizable patterns
@@ -271,7 +271,7 @@
       <div class="footer_column footer_column--bottom">
 
         <div class="footer_copy">
-          ©2017 OZ Design
+          ©2017 OZ Design.
           <br> All rights Reserved
         </div>
 
