--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>What We Do || OZ Design</title>
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/styles.css" media="screen">
 
   <!-- Meta tags for social media -->
@@ -43,7 +43,7 @@
       <ul class="main-menu">
         <li class="main-menu_item main-menu_item--active"><a href="services.html">What We Do</a></li>
         <li class="main-menu_item"><a href="portfolio.html">Our Work</a></li>
-        <li class="main-menu_item"><a href="products.html">Products</a></li>
+        <li class="main-menu_item main-menu_item--prefixed"><a href="products.html">Products</a></li>
         <li class="main-menu_item"><a href="contacts.html">Contact Us</a></li>
       </ul>
       <!--====  End of Menu  ====-->
@@ -56,7 +56,7 @@
         Our Services
       </div>
       <div class="text--big">
-        We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment.
+        We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different.
       </div>
     </div>
 
@@ -74,7 +74,7 @@
     <h3>We specialise in website design, development and user interfaces</h3>
     <p>We are at our best when we are helping companies identify and evaluate new product opportunities, developing product strategies,
     and designing new digital products and services to market.</p>
-    <p>We combine heavyweight website craftsmanship with refined design principals.</p>
+    <p>We combine heavyweight website craftsmanship with refined design principals. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment.</p>
   </div>
   <!--====  End of Text Block  ====-->
 
@@ -222,7 +222,7 @@
       <div class="footer_column footer_column--bottom">
 
         <div class="footer_copy">
-          ©2017 OZ Design
+          ©2017 OZ Design..
           <br> All rights Reserved
         </div>
 
