--- a/product-christmas.html
+++ b/product-christmas.html
@@ -43,14 +43,14 @@
       <ul class="main-menu">
         <li class="main-menu_item"><a href="services.html">What We Do</a></li>
         <li class="main-menu_item"><a href="portfolio.html">Our Work</a></li>
-        <li class="main-menu_item main-menu_item--active"><a href="products.html">Products</a></li>
+        <li class="main-menu_item main-menu_item--prefixed main-menu_item--active"><a href="products.html">Products</a></li>
         <li class="main-menu_item"><a href="contacts.html">Contact Us</a></li>
       </ul>
       <!--====  End of Menu  ====-->
     </div>
   </header>
 
-  <div class="hero hero--short">
+  <div class="hero hero--short hero--long-header hero--mobile-high hero--cta">
     <div class="hero_content container">
       <div class="text--biggest">
         Christmas & New Year <br>
@@ -61,7 +61,7 @@
         <span class="button--price">$50</span>
       </a>
     </div>
-    <div class="hero_bg">
+    <div class="hero_bg hero_bg--light">
       <img src="img/header/xmas.jpg" alt="">
     </div>
   </div>
@@ -152,7 +152,7 @@
         <img src="img/portfolio/contacts/preview-mini-2.jpg" alt="">
         <img src="img/xmas/preview-mini.jpg" alt="">
         <img src="img/portfolio/contacts/preview-mini-4.jpg" alt="">
-      </div>`
+      </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Go see</div>
@@ -182,7 +182,7 @@
       <div class="footer_column footer_column--bottom">
 
         <div class="footer_copy">
-          ©2017 OZ Design
+          ©2017 OZ Design.
           <br> All rights Reserved
         </div>
 
