add frontend project

--- a/portfolio-frontend.html
+++ b/portfolio-frontend.html
@@ -72,6 +72,95 @@
     =          Website preview        =
     =================================-->
     <div class="text-block">
+      <h3>LogosCargo</h3>
+      <p>Tracking, Shipping, and Locations.</p>
+      <a href="https://github.com/OZ-Design/website/tree/master/portfolio-frontend/logoscargo" target="_blank" class="button button--arrow">
+        <span>View project on Github</span>
+        <div class="button_icons">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
+        </div>
+      </a>
+    </div>
+    <div class="grid-2">
+
+      <a href="portfolio-frontend/logoscargo/index.html" target="_blank" class="media media--dark">
+        <div class="media_img">
+          <img src="portfolio-frontend/preview/logoscargo-home.jpg" alt="">
+        </div>
+        <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
+        <div class="media_descr">
+          <h3>Homepage</h3>
+        </div>
+      </a>
+
+      <a href="portfolio-frontend/logoscargo/about.html" target="_blank" class="media media--dark">
+        <div class="media_img">
+          <img src="portfolio-frontend/preview/logoscargo-about.jpg" alt="">
+        </div>
+        <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
+        <div class="media_descr">
+          <h3>Abous Us</h3>
+        </div>
+      </a>
+
+      <a href="portfolio-frontend/logoscargo/faq.html" target="_blank" class="media media--dark">
+        <div class="media_img">
+          <img src="portfolio-frontend/preview/logoscargo-faq.jpg" alt="">
+        </div>
+        <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
+        <div class="media_descr">
+          <h3>FAQ</h3>
+        </div>
+      </a>
+
+      <a href="portfolio-frontend/logoscargo/team.html" target="_blank" class="media media--dark">
+        <div class="media_img">
+          <img src="portfolio-frontend/preview/logoscargo-team.jpg" alt="">
+        </div>
+        <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
+        <div class="media_descr">
+          <h3>Team</h3>
+        </div>
+      </a>
+
+      <a href="portfolio-frontend/logoscargo/news.html" target="_blank" class="media media--dark">
+        <div class="media_img">
+          <img src="portfolio-frontend/preview/logoscargo-news.jpg" alt="">
+        </div>
+        <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
+        <div class="media_descr">
+          <h3>News</h3>
+        </div>
+      </a>
+
+      <a href="portfolio-frontend/logoscargo/contacts.html" target="_blank" class="media media--dark">
+        <div class="media_img">
+          <img src="portfolio-frontend/preview/logoscargo-contacts.jpg" alt="">
+        </div>
+        <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
+        <div class="media_descr">
+          <h3>News</h3>
+        </div>
+      </a>
+
+      <a href="portfolio-frontend/logoscargo/policy.html" target="_blank" class="media media--dark">
+        <div class="media_img">
+          <img src="portfolio-frontend/preview/logoscargo-policy.jpg" alt="">
+        </div>
+        <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
+        <div class="media_descr">
+          <h3>Policy</h3>
+        </div>
+      </a>
+
+    </div>
+    <!--====  End of Website preview  ====-->
+
+    <!--================================
+    =          Website preview        =
+    =================================-->
+    <div class="text-block">
       <h3>Grandstand</h3>
       <p>Full service sports and entertainment agency specializing in athlete representation, their management, and all surrounding business services our clients may need to excell in their career.</p>
       <a href="https://github.com/OZ-Design/website/tree/master/portfolio-frontend/grandstand" target="_blank" class="button button--arrow">
