--- a/portfolio-frontend.html
+++ b/portfolio-frontend.html
@@ -140,7 +140,7 @@
         </div>
         <div class="media_overlay" style="background-image: linear-gradient(to bottom left, transparent, #d0011b);"></div>
         <div class="media_descr">
-          <h3>News</h3>
+          <h3>Contacts</h3>
         </div>
       </a>
 
