update media queries

--- a/policy.html
+++ b/policy.html
@@ -3,25 +3,25 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Refund & Privacy Policies || OZ Design</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="Refund & Privacy Policies || OZ Design" />
-  <meta property="og:title" content="Refund & Privacy Policies || OZ Design" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta itemprop="name" content="Refund & Privacy Policies || OZ Design">
+  <meta property="og:title" content="Refund & Privacy Policies || OZ Design">
   <meta name="twitter:title" content="Refund & Privacy Policies || OZ Design">
-  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/services.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/share-cover/services.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/services.jpg" />
+  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/services.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/share-cover/services.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/services.jpg">
 
 </head>
 
@@ -30,7 +30,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-          <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+          <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
         </a>
     </div>
     <div class="header_menu">
@@ -55,7 +55,7 @@
     </div>
 
     <div class="hero_bg hero_bg--light">
-      <img src="img/header/services.jpg" alt="">
+      <img src="img/header/services.jpg" alt>
     </div>
 
   </div>
@@ -64,7 +64,7 @@
   <!--================================
   =            Text Block            =
   =================================-->
-  <div id="refund" class="text-block">
+  <div class="text-block" id="refund">
     <h3>Refund Policy</h3>
     <p>If you are not 100% satisfied with your purchase, within 14 days from the purchase date, we will fully refund the cost of your order.</p>
     <p>Yes, just as simple as that.</p>
@@ -74,28 +74,28 @@
   <!--================================
   =            Text Block            =
   =================================-->
-  <div id="privacy" class="text-block">
+  <div class="text-block" id="privacy">
     <h3>Privacy Policy</h3>
     <p>This policy covers how we use your personal information. We take your privacy seriously and will take all measures to protect your personal information.</p>
     <p>Any personal information received will only be used to fill your order. We will not sell or redistribute your information to anyone.</p>
   </div>
   <!--====  End of Text Block  ====-->
 
-  </main>
+  
   
   <div class="container">
 
     <div class="case-more">
       <div class="case-more_images">
-        <img src="img/patterns/preview-mini.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt="">
-        <img src="img/xmas/preview-mini.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt="">
+        <img src="img/patterns/preview-mini.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt>
+        <img src="img/xmas/preview-mini.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt>
       </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Go see</div>
-        <a href="products.html" class="button button--uppercase button--extra-large button--invert button--underline">All products</a>
+        <a class="button button--uppercase button--extra-large button--invert button--underline" href="products.html">All products</a>
       </div>
     </div>
 
@@ -108,12 +108,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -136,12 +136,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
