--- a/portfolio-onplan.html
+++ b/portfolio-onplan.html
@@ -3,28 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Onplan - Portfolio || OZ Design</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="Onplan - Portfolio || OZ Design" />
-  <meta property="og:title" content="Onplan - Portfolio || OZ Design" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta itemprop="name" content="Onplan - Portfolio || OZ Design">
+  <meta property="og:title" content="Onplan - Portfolio || OZ Design">
   <meta name="twitter:title" content="Onplan - Portfolio || OZ Design">
-  <meta name="description" content="OnPlan allows you to forecast, budget and collaborate with your team. Enjoy better visibility, greater transparency and more effective benchmarking." />
-  <meta itemprop="description" content="OnPlan allows you to forecast, budget and collaborate with your team. Enjoy better visibility, greater transparency and more effective benchmarking." />
-  <meta property="og:description" content="OnPlan allows you to forecast, budget and collaborate with your team. Enjoy better visibility, greater transparency and more effective benchmarking." />
-  <meta itemprop="image" content="https://ozdesign.us/img/portfolio/onplan/preview.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/portfolio/onplan/preview.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/portfolio/onplan/preview.jpg" />
+  <meta name="description" content="OnPlan allows you to forecast, budget and collaborate with your team. Enjoy better visibility, greater transparency and more effective benchmarking.">
+  <meta itemprop="description" content="OnPlan allows you to forecast, budget and collaborate with your team. Enjoy better visibility, greater transparency and more effective benchmarking.">
+  <meta property="og:description" content="OnPlan allows you to forecast, budget and collaborate with your team. Enjoy better visibility, greater transparency and more effective benchmarking.">
+  <meta itemprop="image" content="https://ozdesign.us/img/portfolio/onplan/preview.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/portfolio/onplan/preview.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/portfolio/onplan/preview.jpg">
 
 </head>
 
@@ -33,7 +33,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-          <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+          <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
         </a>
     </div>
     <div class="header_menu">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="hero_bg hero_bg--light">
-      <img src="img/portfolio/onplan/header.jpg" alt="">
+      <img src="img/portfolio/onplan/header.jpg" alt>
     </div>
 
   </div>
@@ -74,30 +74,30 @@
     <div class="text-block">
       <p>OnPlan allows you to forecast, budget and collaborate with your team. Enjoy better visibility, greater transparency and more effective benchmarking.</p>
 
-        <a href="https://www.behance.net/gallery/54287501/Onplan" target="_blank" class="button button--arrow">
+        <a class="button button--arrow" href="https://www.behance.net/gallery/54287501/Onplan" target="_blank">
           <span>View full project on Behance</span>
           <div class="button_icons">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12.8 12.8"><path d="M6.4,0,5.28,1.12,9.76,5.6H0V7.2H9.76L5.28,11.68,6.4,12.8l6.4-6.4Zm0,0"></path></svg>
           </div>
         </a>
 
-        <div data-videoid="3eu7mh3Cjrk" data-image="img/portfolio/onplan/cover.jpg" class="video-embed"></div>
+        <div class="video-embed" data-image="img/portfolio/onplan/cover.jpg" data-videoid="3eu7mh3Cjrk"></div>
 
     </div>
     <!--====  End of Text Block  ====-->
 
     <div class="case-more">
       <div class="case-more_images">
-        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt="">
+        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt>
       </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Like what you saw?</div>
-        <a href="contacts.html" class="button button--uppercase button--extra-large button--invert button--underline">Contact us</a>
+        <a class="button button--uppercase button--extra-large button--invert button--underline" href="contacts.html">Contact us</a>
       </div>
     </div>
 
@@ -110,12 +110,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -138,12 +138,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
