--- a/contacts.html
+++ b/contacts.html
@@ -3,28 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Contacts || OZ Design</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="Contacts || OZ Design" />
-  <meta property="og:title" content="Contacts || OZ Design" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta itemprop="name" content="Contacts || OZ Design">
+  <meta property="og:title" content="Contacts || OZ Design">
   <meta name="twitter:title" content="Contacts || OZ Design">
-  <meta name="description" content="Let's get in touch. This could be the beginning of great things." />
-  <meta itemprop="description" content="Let's get in touch. This could be the beginning of great things." />
-  <meta property="og:description" content="Let's get in touch. This could be the beginning of great things." />
-  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/contacts.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/share-cover/contacts.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/contacts.jpg" />
+  <meta name="description" content="Let's get in touch. This could be the beginning of great things.">
+  <meta itemprop="description" content="Let's get in touch. This could be the beginning of great things.">
+  <meta property="og:description" content="Let's get in touch. This could be the beginning of great things.">
+  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/contacts.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/share-cover/contacts.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/contacts.jpg">
 
 </head>
 
@@ -33,7 +33,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-        <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+        <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
       </a>
     </div>
     <div class="header_menu">
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="hero_bg hero_bg--light">
-      <img src="img/header/contacts.jpg" alt="">
+      <img src="img/header/contacts.jpg" alt>
     </div>
   </div>
 
@@ -120,17 +120,17 @@
 
       <div class="contacts-form_inner">
         <p>We will help to elaborate a UI/UX service, develop a web design, set up analytics and launch the project.</p>
-        <form id="contact-form" class="form" name="Contacts" netlify-honeypot="bot-field" netlify>
+        <form class="form" id="contact-form" name="Contacts" netlify-honeypot="bot-field" netlify>
           <div class="form_hidden">
             <label>Don’t fill this out: <input name="bot-field"></label>
           </div>
           <div class="form_input">
             <label for="name">Name</label>
-            <input id="name" type="text" name="name" required>
+            <input id="name" name="name" type="text" required>
           </div>
           <div class="form_input">
             <label for="email">Email</label>
-            <input id="email" type="email" name="email" required>
+            <input id="email" name="email" type="email" required>
           </div>
           <div class="form_input">
             <label for="message">Message</label>
@@ -153,12 +153,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -181,12 +181,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
