--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>OZ Design - creative agency</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta property="og:url" content="https://ozdesign.us" />
-  <meta itemprop="name" content="OZ Design - creative agency" />
-  <meta property="og:title" content="OZ Design - creative agency" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta property="og:url" content="https://ozdesign.us">
+  <meta itemprop="name" content="OZ Design - creative agency">
+  <meta property="og:title" content="OZ Design - creative agency">
   <meta name="twitter:title" content="OZ Design - creative agency">
   <meta name="description" content="Ask us about design and branding. Being small we can go into details.">
-  <meta itemprop="description" content="Ask us about design and branding. Being small we can go into details." />
-  <meta property="og:description" content="Ask us about design and branding. Being small we can go into details." />
-  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/homepage.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/share-cover/homepage.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/homepage.jpg" />
+  <meta itemprop="description" content="Ask us about design and branding. Being small we can go into details.">
+  <meta property="og:description" content="Ask us about design and branding. Being small we can go into details.">
+  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/homepage.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/share-cover/homepage.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/homepage.jpg">
 
 </head>
 
@@ -34,7 +34,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-          <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+          <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
         </a>
     </div>
     <div class="header_menu">
@@ -69,23 +69,23 @@
   =            Slider            =
   ======================================-->
   <div class="container">
-    <div id="slider" class="slider">
+    <div class="slider" id="slider">
       <div class="slider_wrapper">
         <ul class="slider_track">
           <li class="slider_item">
-            <img src="img/slide/home-1.jpg" alt="">
+            <img src="img/slide/home-1.jpg" alt>
           </li>
           <li class="slider_item">
-            <img src="img/slide/home-2.jpg" alt="">
+            <img src="img/slide/home-2.jpg" alt>
           </li>
           <li class="slider_item">
-            <img src="img/slide/home-3.jpg" alt="">
+            <img src="img/slide/home-3.jpg" alt>
           </li>
         </ul>
       </div>
       <div class="slider_controls">
         <div id="slider_index"><div class="slider_index-current">1</div><div class="slider_index-all">/3</div></div>
-        <div id="slider_progress" class="slider_progress">
+        <div class="slider_progress" id="slider_progress">
           <div class="slider_progress-inner"></div>
         </div>
       </div>
@@ -121,13 +121,13 @@
           </div>
         </div>
         <div class="case_btn">
-          <a href="portfolio-fod.html" class="button button--invert">
+          <a class="button button--invert" href="portfolio-fod.html">
               <span>View more</span>
             </a>
         </div>
         <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #2dd6d6)"></div>
         <div class="case_img">
-          <img src="img/portfolio/fod/preview.jpg" alt="">
+          <img src="img/portfolio/fod/preview.jpg" alt>
         </div>
       </div>
 
@@ -142,13 +142,13 @@
           </div>
         </div>
         <div class="case_btn">
-          <a href="portfolio-cityjournal.html" class="button button--invert">
+          <a class="button button--invert" href="portfolio-cityjournal.html">
               <span>View more</span>
             </a>
         </div>
         <div class="case_overlay"></div>
         <div class="case_img">
-          <img src="img/portfolio/cityjournal/preview.jpg" alt="">
+          <img src="img/portfolio/cityjournal/preview.jpg" alt>
         </div>
       </div>
 
@@ -163,13 +163,13 @@
           </div>
         </div>
         <div class="case_btn">
-          <a href="portfolio-worktimer.html" class="button button--invert">
+          <a class="button button--invert" href="portfolio-worktimer.html">
               <span>View more</span>
             </a>
         </div>
         <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #40aefd)"></div>
         <div class="case_img">
-          <img src="img/portfolio/worktimer/preview.jpg" alt="">
+          <img src="img/portfolio/worktimer/preview.jpg" alt>
         </div>
       </div>
 
@@ -185,13 +185,13 @@
           </div>
         </div>
         <div class="case_btn">
-          <a href="portfolio-yogidia.html" class="button button--invert">
+          <a class="button button--invert" href="portfolio-yogidia.html">
               <span>View more</span>
             </a>
         </div>
         <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #c575cc)"></div>
         <div class="case_img">
-          <img src="img/portfolio/yogidia/preview.jpg" alt="">
+          <img src="img/portfolio/yogidia/preview.jpg" alt>
         </div>
       </div>
 
@@ -199,15 +199,15 @@
 
     <div class="case-more">
       <div class="case-more_images">
-        <img src="img/portfolio/onplan/preview-mini.jpg" alt="">
-        <img src="img/portfolio/frontend/preview-mini.jpg" alt="">
-        <img src="img/portfolio/operator/preview-mini.jpg" alt="">
-        <img src="img/portfolio/logotypes/preview-mini.jpg" alt="">
+        <img src="img/portfolio/onplan/preview-mini.jpg" alt>
+        <img src="img/portfolio/frontend/preview-mini.jpg" alt>
+        <img src="img/portfolio/operator/preview-mini.jpg" alt>
+        <img src="img/portfolio/logotypes/preview-mini.jpg" alt>
       </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Go see</div>
-        <a href="portfolio.html" class="button button--uppercase button--extra-large button--invert button--underline">All cases</a>
+        <a class="button button--uppercase button--extra-large button--invert button--underline" href="portfolio.html">All cases</a>
       </div>
     </div>
     
@@ -221,12 +221,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -249,12 +249,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
