--- a/portfolio-frontend/logoscargo/index.html
+++ b/portfolio-frontend/logoscargo/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>LogosCargo | Tracking, Shipping, and Locations</title>
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&amp;subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="css/vendor.css" />
-  <link rel="stylesheet" media="(max-width: 748px)" href="css/styles-mobile.css" />
-  <link rel="stylesheet" media="(min-width: 749px) and (max-width: 1199px)" href="css/styles-tablet.css" />
-  <link rel="stylesheet" media="(min-width: 1200px)" href="css/styles.css" />
-  <link rel="shortcut icon" href="img/favicon/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-  <link rel="manifest" href="img/favicon/manifest.json">
-  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#1d1d1d">
+  <link href="css/vendor.css" rel="stylesheet">
+  <link href="css/styles-mobile.css" rel="stylesheet" media="(max-width: 748px)">
+  <link href="css/styles-tablet.css" rel="stylesheet" media="(min-width: 749px) and (max-width: 1199px)">
+  <link href="css/styles.css" rel="stylesheet" media="(min-width: 1200px)">
+  <link href="img/favicon/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link type="image/png" href="img/favicon/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link href="img/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="img/favicon/manifest.json" rel="manifest">
+  <link href="img/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#1d1d1d">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
   <meta name="theme-color" content="#2b5797">
@@ -26,12 +26,12 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-        <svg class="logo" alt="logoscargo logo" title="Go to homepage">
+        <svg class="logo" title="Go to homepage" alt="logoscargo logo">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icons.svg#logo-color"></use>
         </svg>
       </a>
     </div>
-    <div data-target="#js-mobile-menu" class="header_menu-button button button--small button--invert js-menu-toggle"><span>Menu</span></div>
+    <div class="header_menu-button button button--small button--invert js-menu-toggle" data-target="#js-mobile-menu"><span>Menu</span></div>
     <div class="header_menu">
       <!--================================
       =                Menu              =
@@ -42,7 +42,7 @@
         <li class="main-menu_item link link--invert"><a href="news.html">News</a></li>
         <li class="main-menu_item link link--invert"><a href="faq.html">FAQ</a></li>
         <li class="main-menu_item link link--invert"><a href="contacts.html">Contacts</a></li>
-        <li class="main-menu_item"><a class="button button--invert" href="#modal-tracking" data-lity><span>Track</span></a></li>
+        <li class="main-menu_item"><a class="button button--invert" data-lity href="#modal-tracking"><span>Track</span></a></li>
       </ul>
       <!--====  End of Menu  ====-->
     </div>
@@ -51,13 +51,13 @@
   <!--================================
   =           Mobile Menu            =
   =================================-->
-  <ul id="js-mobile-menu" class="main-menu main-menu--mobile">
+  <ul class="main-menu main-menu--mobile" id="js-mobile-menu">
     <li class="main-menu_item link link--invert"><a href="about.html">About Us</a></li>
     <li class="main-menu_item link link--invert"><a href="team.html">Team</a></li>
     <li class="main-menu_item link link--invert"><a href="news.html">News</a></li>
     <li class="main-menu_item link link--invert"><a href="faq.html">FAQ</a></li>
     <li class="main-menu_item link link--invert"><a href="contacts.html">Contacts</a></li>
-    <li class="main-menu_item"><a class="button button--invert" href="#modal-tracking" data-lity><span>Track</span></a></li>
+    <li class="main-menu_item"><a class="button button--invert" data-lity href="#modal-tracking"><span>Track</span></a></li>
   </ul>
   <!--====  End of Mobile Menu  ====-->
 
@@ -67,7 +67,7 @@
         LogosCargo<br>
         Tracking, Shipping, and Locations
       </div>
-      <a href="#modal-order" class="button button--invert button--extra-large" data-lity><span>Request shipping</span></a>
+      <a class="button button--invert button--extra-large" data-lity href="#modal-order"><span>Request shipping</span></a>
     </div>
     <div class="hero_bg hero_bg--dark">
       <div class="hero_bg-img" style="background-image: url('img/header/home.jpg');"></div>
@@ -80,7 +80,7 @@
       
       <div class="grid-4 container">
 
-        <a href="service-dev.html" class="card">
+        <a class="card" href="service-dev.html">
           <div class="card_top card_top--s">
             <div class="card_icon">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icons.svg#forlift"></use></svg>
@@ -88,11 +88,11 @@
             <div class="card_title">Production<br> Deployment</div>
           </div>
           <div class="card_img">
-            <img src="img/services/dev.jpg" alt="">
+            <img src="img/services/dev.jpg" alt>
           </div>
         </a>
 
-        <a href="service-tour.html" class="card">
+        <a class="card" href="service-tour.html">
           <div class="card_top card_top--s">
             <div class="card_icon">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icons.svg#helictopter"></use></svg>
@@ -100,11 +100,11 @@
             <div class="card_title">Furniture<br> Tours</div>
           </div>
           <div class="card_img">
-            <img src="img/services/heli.jpg" alt="">
+            <img src="img/services/heli.jpg" alt>
           </div>
         </a>
 
-        <a href="service-collect.html" class="card">
+        <a class="card" href="service-collect.html">
           <div class="card_top card_top--s">
             <div class="card_icon">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icons.svg#truck"></use></svg>
@@ -112,11 +112,11 @@
             <div class="card_title">Collected<br> Cargoes</div>
           </div>
           <div class="card_img">
-            <img src="img/services/truck.jpg" alt="">
+            <img src="img/services/truck.jpg" alt>
           </div>
         </a>
 
-        <a href="service-container.html" class="card">
+        <a class="card" href="service-container.html">
           <div class="card_top card_top--s">
             <div class="card_icon">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icons.svg#ship"></use></svg>
@@ -124,7 +124,7 @@
             <div class="card_title">Container<br> Transport</div>
           </div>
           <div class="card_img">
-            <img src="img/services/ship.jpg" alt="">
+            <img src="img/services/ship.jpg" alt>
           </div>
         </a>
 
@@ -160,7 +160,7 @@
 
     <div class="media-block">
       <div class="media-block_img">
-        <img alt="" class="js-media-block" src="img/media.jpg">
+        <img class="js-media-block" src="img/media.jpg" alt>
         <div class="media-block_img-background"></div>
       </div>
       <div class="media-block_content">
@@ -183,7 +183,7 @@
     </div>
 
     <div class="container--tight">
-      <div data-videoid="NVO7bzHpLpE" data-image="img/video.jpg" class="video-embed"></div>
+      <div class="video-embed" data-image="img/video.jpg" data-videoid="NVO7bzHpLpE"></div>
     </div>
        
   </div>
@@ -221,16 +221,16 @@
 
   <div class="partners">
     <div class="container">
-      <a href="#" class="partners_item" target="_blank">
-        <img src="img/partners.png" alt="partner" class="partners_img"></a>
-      <a href="#" class="partners_item" target="_blank">
-        <img src="img/partners.png" alt="partner" class="partners_img"></a>
-      <a href="#" class="partners_item" target="_blank">
-        <img src="img/partners.png" alt="partner" class="partners_img"></a>
-      <a href="#" class="partners_item" target="_blank">
-        <img src="img/partners.png" alt="partner" class="partners_img"></a>
-      <a href="#" class="partners_item" target="_blank">
-        <img src="img/partners.png" alt="partner" class="partners_img"></a>
+      <a class="partners_item" href="#" target="_blank">
+        <img class="partners_img" src="img/partners.png" alt="partner"></a>
+      <a class="partners_item" href="#" target="_blank">
+        <img class="partners_img" src="img/partners.png" alt="partner"></a>
+      <a class="partners_item" href="#" target="_blank">
+        <img class="partners_img" src="img/partners.png" alt="partner"></a>
+      <a class="partners_item" href="#" target="_blank">
+        <img class="partners_img" src="img/partners.png" alt="partner"></a>
+      <a class="partners_item" href="#" target="_blank">
+        <img class="partners_img" src="img/partners.png" alt="partner"></a>
     </div>
   </div>
 
@@ -257,20 +257,20 @@
     </div>
   </footer>
 
-  <div id="modal-order" class="lity-hide modal">
+  <div class="lity-hide modal" id="modal-order">
     <h3 style="text-align:center;">Shipping request</h3>
-    <form id="contact-form" class="form" name="Contacts">
+    <form class="form" id="contact-form" name="Contacts">
       <div class="form_input">
         <label for="name">Your name</label>
-        <input id="name" type="text" name="name" required="">
+        <input id="name" name="name" type="text" required>
       </div>
       <div class="form_input">
         <label for="email">Email</label>
-        <input id="email" type="email" name="email" required="">
+        <input id="email" name="email" type="email" required>
       </div>
       <div class="form_input">
         <label for="message">Message</label>
-        <textarea id="message" name="message" cols="50" rows="5" required=""></textarea>
+        <textarea id="message" name="message" cols="50" rows="5" required></textarea>
       </div>
       <button class="button form_button">
         <span>Send</span>
@@ -278,22 +278,21 @@
     </form>
   </div>
 
-  <div id="modal-tracking" class="lity-hide modal">
+  <div class="lity-hide modal" id="modal-tracking">
     <h3 style="text-align:center;">Track shipping</h3>
     <div id="js-tracking_output"></div>
-    <form id="contact-form" class="form" name="Tracking">
+    <form class="form" id="contact-form" name="Tracking">
       <div class="form_input">
         <label for="js-tracking_input">Tracking number</label>
-        <input id="js-tracking_input" type="text" name="name" required="" value="12345678">
+        <input id="js-tracking_input" name="name" type="text" required value="12345678">
       </div>
-      <button id="js-tracking_submit" class="button form_button">
+      <button class="button form_button" id="js-tracking_submit">
         <span>Track</span>
       </button>
     </form>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
 </body>
