--- a/portfolio-logotypes.html
+++ b/portfolio-logotypes.html
@@ -3,28 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Logotypes - Portfolio || OZ Design</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="Logotypes - Portfolio || OZ Design" />
-  <meta property="og:title" content="Logotypes - Portfolio || OZ Design" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta itemprop="name" content="Logotypes - Portfolio || OZ Design">
+  <meta property="og:title" content="Logotypes - Portfolio || OZ Design">
   <meta name="twitter:title" content="Logotypes - Portfolio || OZ Design">
-  <meta name="description" content="Created for various clients, from start-ups to grown-up businesses." />
-  <meta itemprop="description" content="Created for various clients, from start-ups to grown-up businesses." />
-  <meta property="og:description" content="Created for various clients, from start-ups to grown-up businesses." />
-  <meta itemprop="image" content="https://ozdesign.us/img/portfolio/logotypes/preview.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/portfolio/logotypes/preview.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/portfolio/logotypes/preview.jpg" />
+  <meta name="description" content="Created for various clients, from start-ups to grown-up businesses.">
+  <meta itemprop="description" content="Created for various clients, from start-ups to grown-up businesses.">
+  <meta property="og:description" content="Created for various clients, from start-ups to grown-up businesses.">
+  <meta itemprop="image" content="https://ozdesign.us/img/portfolio/logotypes/preview.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/portfolio/logotypes/preview.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/portfolio/logotypes/preview.jpg">
 
 </head>
 
@@ -33,7 +33,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-          <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+          <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
         </a>
     </div>
     <div class="header_menu">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="hero_bg hero_bg--light">
-      <img src="img/portfolio/logotypes/header.jpg" alt="">
+      <img src="img/portfolio/logotypes/header.jpg" alt>
     </div>
 
   </div>
@@ -75,7 +75,7 @@
       <h3>Sport Score - Live Scores, Results & Standings</h3>
       <p>Sport Score app provides live scores and results from more sources with purpose to present the fastest live scores of all today matches for all major sports.</p>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/8.jpg" alt="">
+        <img src="img/portfolio/logotypes/8.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
@@ -86,7 +86,7 @@
     <div class="text-block">
       <h3>Lemongrass - Chili Bar</h3>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/1.jpg" alt="">
+        <img src="img/portfolio/logotypes/1.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
@@ -98,7 +98,7 @@
       <h3>Theo Pays</h3>
       <p>Online payment aggregator service in Germany.</p>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/2.jpg" alt="">
+        <img src="img/portfolio/logotypes/2.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
@@ -112,7 +112,7 @@
         Zwinkr is a way to meet new people, expand your social network, meet locals when you’re traveling, or just live in the now.
       </p>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/3.jpg" alt="">
+        <img src="img/portfolio/logotypes/3.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
@@ -124,7 +124,7 @@
       <h3>Piing</h3>
       <p>Social network for gamers.</p>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/4.jpg" alt="">
+        <img src="img/portfolio/logotypes/4.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
@@ -136,7 +136,7 @@
       <h3>Diabetes Care Academy</h3>
       <p>Diabetes Care Academy make positive contributions for people with diabetes and their families.</p>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/5.jpg" alt="">
+        <img src="img/portfolio/logotypes/5.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
@@ -148,7 +148,7 @@
       <h3>Spade 115 Media</h3>
       <p>Network of gaming-related media websites.</p>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/6.jpg" alt="">
+        <img src="img/portfolio/logotypes/6.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
@@ -160,22 +160,22 @@
       <h3>Lago Copenhagen</h3>
       <p>Yoga and spa center in Copenhagen.</p>
       <div class="img-block">
-        <img src="img/portfolio/logotypes/7.jpg" alt="">
+        <img src="img/portfolio/logotypes/7.jpg" alt>
       </div>
     </div>
     <!--====  End of Logotype preview  ====-->
 
     <div class="case-more">
       <div class="case-more_images">
-        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt="">
+        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt>
       </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Like what you saw?</div>
-        <a href="contacts.html" class="button button--uppercase button--extra-large button--invert button--underline">Contact us</a>
+        <a class="button button--uppercase button--extra-large button--invert button--underline" href="contacts.html">Contact us</a>
       </div>
     </div>
 
@@ -188,12 +188,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -216,12 +216,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
