--- a/portfolio-operator.html
+++ b/portfolio-operator.html
@@ -3,28 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>1 Operator - Portfolio || OZ Design</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="1 Operator - Portfolio || OZ Design" />
-  <meta property="og:title" content="1 Operator - Portfolio || OZ Design" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta itemprop="name" content="1 Operator - Portfolio || OZ Design">
+  <meta property="og:title" content="1 Operator - Portfolio || OZ Design">
   <meta name="twitter:title" content="1 Operator - Portfolio || OZ Design">
   <meta name="description" content="Client wanted to create modern and easy to use web app for HR management. We have created a logotype, web/mobile app design, icons pack and brand identity.">
-  <meta itemprop="description" content="Client wanted to create modern and easy to use web app for HR management. We have created a logotype, web/mobile app design, icons pack and brand identity." />
-  <meta property="og:description" content="Client wanted to create modern and easy to use web app for HR management. We have created a logotype, web/mobile app design, icons pack and brand identity." />
-  <meta itemprop="image" content="https://ozdesign.us/img/portfolio/operator/preview.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/portfolio/operator/preview.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/portfolio/operator/preview.jpg" />
+  <meta itemprop="description" content="Client wanted to create modern and easy to use web app for HR management. We have created a logotype, web/mobile app design, icons pack and brand identity.">
+  <meta property="og:description" content="Client wanted to create modern and easy to use web app for HR management. We have created a logotype, web/mobile app design, icons pack and brand identity.">
+  <meta itemprop="image" content="https://ozdesign.us/img/portfolio/operator/preview.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/portfolio/operator/preview.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/portfolio/operator/preview.jpg">
 
 </head>
 
@@ -33,7 +33,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-          <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+          <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
         </a>
     </div>
     <div class="header_menu">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="hero_bg hero_bg--light">
-      <img src="img/portfolio/operator/header.jpg" alt="">
+      <img src="img/portfolio/operator/header.jpg" alt>
     </div>
 
   </div>
@@ -80,20 +80,20 @@
     <!--=====================================
     =            Slider            =
     ======================================-->
-    <div id="slider" class="slider">
+    <div class="slider" id="slider">
       <div class="slider_wrapper">
         <ul class="slider_track">
           <li class="slider_item">
-            <img src="img/portfolio/operator/1.jpg" alt="">
+            <img src="img/portfolio/operator/1.jpg" alt>
           </li>
           <li class="slider_item">
-            <img src="img/portfolio/operator/2.jpg" alt="">
+            <img src="img/portfolio/operator/2.jpg" alt>
           </li>
           <li class="slider_item">
-            <img src="img/portfolio/operator/3.jpg" alt="">
+            <img src="img/portfolio/operator/3.jpg" alt>
           </li>
           <li class="slider_item">
-            <img src="img/portfolio/operator/4.jpg" alt="">
+            <img src="img/portfolio/operator/4.jpg" alt>
           </li>
         </ul>
       </div>
@@ -102,7 +102,7 @@
           <div class="slider_index-current">1</div>
           <div class="slider_index-all">/4</div>
         </div>
-        <div id="slider_progress" class="slider_progress">
+        <div class="slider_progress" id="slider_progress">
           <div class="slider_progress-inner"></div>
         </div>
       </div>
@@ -111,15 +111,15 @@
 
     <div class="case-more">
       <div class="case-more_images">
-        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt="">
+        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt>
       </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Like what you saw?</div>
-        <a href="contacts.html" class="button button--uppercase button--extra-large button--invert button--underline">Contact us</a>
+        <a class="button button--uppercase button--extra-large button--invert button--underline" href="contacts.html">Contact us</a>
       </div>
     </div>
     
@@ -132,12 +132,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -160,12 +160,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
