--- a/portfolio.html
+++ b/portfolio.html
@@ -3,28 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Our Work || OZ Design</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="Our Work || OZ Design" />
-  <meta property="og:title" content="Our Work || OZ Design" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta itemprop="name" content="Our Work || OZ Design">
+  <meta property="og:title" content="Our Work || OZ Design">
   <meta name="twitter:title" content="Our Work || OZ Design">
-  <meta name="description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences." />
-  <meta itemprop="description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences." />
-  <meta property="og:description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences." />
-  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/portfolio.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/share-cover/portfolio.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/portfolio.jpg" />
+  <meta name="description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences.">
+  <meta itemprop="description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences.">
+  <meta property="og:description" content="With our rapidly growing portfolio and range of clients, <br>We've hand picked some projects to showcase our broad range of experiences.">
+  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/portfolio.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/share-cover/portfolio.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/portfolio.jpg">
 
 </head>
 
@@ -33,7 +33,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-          <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+          <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
         </a>
     </div>
     <div class="header_menu">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="hero_bg hero_bg--light">
-      <img src="img/header/portfolio.jpg" alt="">
+      <img src="img/header/portfolio.jpg" alt>
     </div>
 
   </div>
@@ -84,13 +84,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-logotypes.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-logotypes.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #ffd200)"></div>
           <div class="case_img">
-            <img src="img/portfolio/logotypes/preview.jpg" alt="">
+            <img src="img/portfolio/logotypes/preview.jpg" alt>
           </div>
         </div>
 
@@ -105,13 +105,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-frontend.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-frontend.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #000000)"></div>
           <div class="case_img">
-            <img src="img/portfolio/frontend/preview.jpg" alt="">
+            <img src="img/portfolio/frontend/preview.jpg" alt>
           </div>
         </div>
 
@@ -126,13 +126,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-fod.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-fod.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #2dd6d6)"></div>
           <div class="case_img">
-            <img src="img/portfolio/fod/preview.jpg" alt="">
+            <img src="img/portfolio/fod/preview.jpg" alt>
           </div>
         </div>
 
@@ -147,14 +147,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-cityjournal.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-cityjournal.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay"></div>
           <div class="case_img">
-            <img src="img/portfolio/cityjournal/preview.jpg"
-              alt="">
+            <img src="img/portfolio/cityjournal/preview.jpg" alt>
           </div>
         </div>
 
@@ -169,13 +168,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-onplan.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-onplan.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #36b5ea)"></div>
           <div class="case_img">
-            <img src="img/portfolio/onplan/preview.jpg" alt="">
+            <img src="img/portfolio/onplan/preview.jpg" alt>
           </div>
         </div>
 
@@ -190,13 +189,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-worktimer.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-worktimer.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #40aefd)"></div>
           <div class="case_img">
-            <img src="img/portfolio/worktimer/preview.jpg" alt="">
+            <img src="img/portfolio/worktimer/preview.jpg" alt>
           </div>
         </div>
 
@@ -212,13 +211,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-yogidia.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-yogidia.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #c575cc)"></div>
           <div class="case_img">
-            <img src="img/portfolio/yogidia/preview.jpg" alt="">
+            <img src="img/portfolio/yogidia/preview.jpg" alt>
           </div>
         </div>
 
@@ -233,14 +232,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-horeca.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-horeca.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #ba8630)"></div>
           <div class="case_img">
-            <img src="img/portfolio/horeca/preview.jpg"
-              alt="">
+            <img src="img/portfolio/horeca/preview.jpg" alt>
           </div>
         </div>
 
@@ -255,14 +253,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-bygosh.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-bygosh.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #cbb15b)"></div>
           <div class="case_img">
-            <img src="img/portfolio/bygosh/preview.jpg"
-              alt="">
+            <img src="img/portfolio/bygosh/preview.jpg" alt>
           </div>
         </div>
 
@@ -278,13 +275,13 @@
             </div>
           </div>
           <div class="case_btn">
-            <a href="portfolio-operator.html" class="button button--invert">
+            <a class="button button--invert" href="portfolio-operator.html">
               <span>View more</span>
             </a>
           </div>
           <div class="case_overlay" style="background-image: linear-gradient(to bottom left, transparent, #00fe00);"></div>
           <div class="case_img">
-            <img src="img/portfolio/operator/preview.jpg" alt="">
+            <img src="img/portfolio/operator/preview.jpg" alt>
           </div>
         </div>
 
@@ -292,15 +289,15 @@
 
     <div class="case-more">
       <div class="case-more_images">
-        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt="">
-        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt="">
+        <img src="img/portfolio/contacts/preview-mini-1.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-2.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-3.jpg" alt>
+        <img src="img/portfolio/contacts/preview-mini-4.jpg" alt>
       </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Like what you saw?</div>
-        <a href="contacts.html" class="button button--uppercase button--extra-large button--invert button--underline">Contact us</a>
+        <a class="button button--uppercase button--extra-large button--invert button--underline" href="contacts.html">Contact us</a>
       </div>
     </div>
     
@@ -314,12 +311,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -342,12 +339,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
