--- a/services.html
+++ b/services.html
@@ -3,28 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>What We Do || OZ Design</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,400,600" rel="stylesheet"> -->
-  <link rel="stylesheet" href="css/styles.css" media="screen">
+  <link href="css/styles.css" rel="stylesheet" media="screen">
 
   <!-- Meta tags for social media -->
-  <link rel="shortcut icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="apple-touch-icon" href="https://ozdesign.us/img/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://ozdesign.us/img/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://ozdesign.us/img/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://ozdesign.us/img/apple-touch-icon-152x152.png">
-  <meta itemprop="name" content="What We Do || OZ Design" />
-  <meta property="og:title" content="What We Do || OZ Design" />
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link type="image/png" href="img/favicon-16x16.png" rel="icon" sizes="16x16">
+  <link type="image/png" href="img/favicon-32x32.png" rel="icon" sizes="32x32">
+  <link href="https://ozdesign.us/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://ozdesign.us/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+  <link href="https://ozdesign.us/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+  <link href="https://ozdesign.us/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+  <meta itemprop="name" content="What We Do || OZ Design">
+  <meta property="og:title" content="What We Do || OZ Design">
   <meta name="twitter:title" content="What We Do || OZ Design">
-  <meta name="description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment." />
-  <meta itemprop="description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment." />
-  <meta property="og:description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment." />
-  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/services.jpg" />
-  <meta property="og:image" content="https://ozdesign.us/img/share-cover/services.jpg" />
-  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/services.jpg" />
+  <meta name="description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment.">
+  <meta itemprop="description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment.">
+  <meta property="og:description" content="We provide a truly unique and bespoke web design service - Creativity is at the heart of everything we do and we believe every brand is different. We work with each of our clients to craft bespoke websites that drive growth, increase engagement and provide return on investment.">
+  <meta itemprop="image" content="https://ozdesign.us/img/share-cover/services.jpg">
+  <meta property="og:image" content="https://ozdesign.us/img/share-cover/services.jpg">
+  <meta name="twitter:image:src" content="https://ozdesign.us/img/share-cover/services.jpg">
 
 </head>
 
@@ -33,7 +33,7 @@
   <header class="header container">
     <div class="header_logo">
       <a href="/" title="Go to homepage">
-          <img src="img/logo.svg" class="logo" alt="OZ Design logotype" title="Go to homepage">
+          <img class="logo" src="img/logo.svg" title="Go to homepage" alt="OZ Design logotype">
         </a>
     </div>
     <div class="header_menu">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="hero_bg hero_bg--light">
-      <img src="img/header/services.jpg" alt="">
+      <img src="img/header/services.jpg" alt>
     </div>
 
   </div>
@@ -100,8 +100,7 @@
         </div>
         <div class="case-simple_img">
           <div class="case-simple_overlay" style="background-image: linear-gradient(to bottom left, transparent, #ffd200);"></div>
-          <img src="img/service/creative.jpg"
-            alt="">
+          <img src="img/service/creative.jpg" alt>
         </div>
       </div>
       
@@ -118,8 +117,7 @@
         </div>
         <div class="case-simple_img">
           <div class="case-simple_overlay" style="background-image: linear-gradient(to bottom left, transparent, #000000);"></div>
-          <img src="img/service/technology.jpg"
-            alt="">
+          <img src="img/service/technology.jpg" alt>
         </div>
       </div>
       
@@ -136,8 +134,7 @@
         </div>
         <div class="case-simple_img">
           <div class="case-simple_overlay" style="background-image: linear-gradient(to bottom left, transparent, #2473ab);"></div>
-          <img src="img/service/brand-growth.jpg"
-            alt="">
+          <img src="img/service/brand-growth.jpg" alt>
         </div>
       </div>
 
@@ -189,15 +186,15 @@
   <div class="container">
     <div class="case-more">
       <div class="case-more_images">
-        <img src="img/portfolio/onplan/preview-mini.jpg" alt="">
-        <img src="img/portfolio/frontend/preview-mini.jpg" alt="">
-        <img src="img/portfolio/operator/preview-mini.jpg" alt="">
-        <img src="img/portfolio/logotypes/preview-mini.jpg" alt="">
+        <img src="img/portfolio/onplan/preview-mini.jpg" alt>
+        <img src="img/portfolio/frontend/preview-mini.jpg" alt>
+        <img src="img/portfolio/operator/preview-mini.jpg" alt>
+        <img src="img/portfolio/logotypes/preview-mini.jpg" alt>
       </div>
       <div class="case-more_overlay"></div>
       <div class="case-more_action">
         <div class="case-more_action-title">Go see</div>
-        <a href="portfolio.html" class="button button--uppercase button--extra-large button--invert button--underline">All cases</a>
+        <a class="button button--uppercase button--extra-large button--invert button--underline" href="portfolio.html">All cases</a>
       </div>
     </div>
   </div>
@@ -209,12 +206,12 @@
       <div class="footer_column footer_column--top">
 
         <div class="footer_logo">
-          <img src="img/logo-mini-dark.svg" class="logo" alt="OZ Design logotype" title="OZ Design logotype">
+          <img class="logo" src="img/logo-mini-dark.svg" title="OZ Design logotype" alt="OZ Design logotype">
         </div>
 
         <div class="footer_contact">
           <p class="h5-like">We're an experienced and passionate team; we’d love to build something great together.</p>
-          <a href="mailto:o@ozdesign.us" class="button button--large button--underline">hi@ozdesign.us</a>
+          <a class="button button--large button--underline" href="mailto:o@ozdesign.us">hi@ozdesign.us</a>
         </div>
 
       </div>
@@ -237,12 +234,11 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2"></script>
+  <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
