add valentine product

--- a/products.html
+++ b/products.html
@@ -108,6 +108,17 @@
         </div>
       </a>
 
+      <a class="media" href="product-valentine.html">
+        <div class="media_img">
+          <img src="img/product/valentine.jpg" alt>
+        </div>
+        <div class="media_overlay" style="background-color: #EB5753; background-image: linear-gradient(to bottom left, transparent, #430F0D);"></div>
+        <div class="media_price">$9</div>
+        <div class="media_descr">
+          <h3>Valentine's Day Set: 6 lovely characters and 20 design elements</h3>
+        </div>
+      </a>
+
     </div>
 
     <div class="case-more">
