make title fit the header

--- a/product-valentine.html
+++ b/product-valentine.html
@@ -54,7 +54,7 @@
     <div class="hero_content container">
       <div class="text--biggest">
         Valentine's Day Set <br>
-        6 lovely characters and 20 design elements
+        6 lovely characters and 20 elements
       </div>
       <a class="button button--large button--underline" href="https://gumroad.com/l/valentines-day" target="_blank">
         <span>Buy Now</span>
