--- a/contacts.html
+++ b/contacts.html
@@ -41,10 +41,18 @@
       =            Menu           =
       =================================-->
       <ul class="main-menu">
-        <li class="main-menu_item"><a href="services.html">What We Do</a></li>
-        <li class="main-menu_item"><a href="portfolio.html">Our Work</a></li>
-        <li class="main-menu_item main-menu_item--prefixed"><a href="products.html">Products</a></li>
-        <li class="main-menu_item main-menu_item--active"><a href="contacts.html">Contact Us</a></li>
+        <li class="main-menu_item">
+          <a href="services.html">What We Do</a>
+        </li>
+        <li class="main-menu_item">
+          <a href="portfolio.html">Our Work</a>
+        </li>
+        <li class="main-menu_item main-menu_item--prefixed">
+          <a href="products.html">Products</a>
+        </li>
+        <li class="main-menu_item main-menu_item--active">
+          <a href="contacts.html">Contact Us</a>
+        </li>
       </ul>
       <!--====  End of Menu  ====-->
     </div>
@@ -122,7 +130,9 @@
         <p>We will help to elaborate a UI/UX service, develop a web design, set up analytics and launch the project.</p>
         <form class="form" id="contact-form" name="Contacts" netlify-honeypot="bot-field" netlify>
           <div class="form_hidden">
-            <label>Don’t fill this out: <input name="bot-field"></label>
+            <label>Don’t fill this out:
+              <input name="bot-field">
+            </label>
           </div>
           <div class="form_input">
             <label for="name">Name</label>
@@ -181,14 +191,15 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
   <script src="js/app.package.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script src="https://www.googletagmanager.com/gtag/js?id=UA-90859140-2" async></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'UA-90859140-2');
   </script>
