fix form thank you page

--- a/ru/uninstall.html
+++ b/ru/uninstall.html
@@ -19,7 +19,7 @@
       <b>Жаль</b> видеть как вы уходите
     </div>
     <div class="title title--small">Можем ли мы что-нибудь сделать чтобы вас вернуть?</div>
-    <form action="form-sent" name="Uninstall" netlify-honeypot="bot-field" netlify class="center-all">
+    <form action="ru/form-sent" name="Uninstall" netlify-honeypot="bot-field" netlify class="center-all">
       <div class="form_hidden input__field">
         <label>Не заполняйте это:
           <input name="bot-field">
