--- a/uk/bug-report.html
+++ b/uk/bug-report.html
@@ -19,7 +19,7 @@
       Повідомити
       <b>про помилку</b>
     </div>
-    <form action="form-sent" name="Bug Report" netlify-honeypot="bot-field" netlify class="center-all">
+    <form action="uk/form-sent" name="Bug Report" netlify-honeypot="bot-field" netlify class="center-all">
       <div class="input">
         <label class="input__label" for="email">
           <span class="input__label-icon">
