delete action as it causing a bug with netlify

--- a/uk/feature-proposal.html
+++ b/uk/feature-proposal.html
@@ -19,7 +19,7 @@
       Запропонувати
       <b>ідею</b>
     </div>
-    <form action="form-sent" name="Feature Proposal" netlify-honeypot="bot-field" netlify class="center-all">
+    <form name="Feature Proposal" netlify-honeypot="bot-field" netlify class="center-all">
       <div class="input">
         <label class="input__label" for="email">
           <span class="input__label-icon">
