--- a/uk/uninstall.html
+++ b/uk/uninstall.html
@@ -19,7 +19,7 @@
       <b>Шкода</b> що ви залишаєте нас
     </div>
     <div class="title title--small">Ми можемо щось зробити щоб ви повернулись?</div>
-    <form action="form-sent" name="Uninstall" netlify-honeypot="bot-field" netlify class="center-all">
+    <form name="Uninstall" netlify-honeypot="bot-field" netlify class="center-all">
       <div class="form_hidden input__field">
         <label>Не заповняйте це:
           <input name="bot-field">
