delete action as it causing a bug with netlify

--- a/uninstall.html
+++ b/uninstall.html
@@ -19,7 +19,7 @@
       <b>Sorry</b> to see you go
     </div>
     <div class="title title--small">Anything we can do to get you back?</div>
-    <form action="form-sent" name="Uninstall" netlify-honeypot="bot-field" netlify class="center-all">
+    <form name="Uninstall" netlify-honeypot="bot-field" netlify class="center-all">
       <div class="form_hidden input__field">
         <label>Don’t fill this out:
           <input name="bot-field">
