--- a/bug-report.html
+++ b/bug-report.html
@@ -18,7 +18,7 @@
     <div class="title">
       <b>Report a bug</b> in extension
     </div>
-    <form action="form-sent" name="Bug Report" netlify-honeypot="bot-field" netlify class="center-all">
+    <form name="Bug Report" netlify-honeypot="bot-field" netlify class="center-all">
       <div class="input">
         <label class="input__label" for="email">
           <span class="input__label-icon">
