--- a/feature-proposal.html
+++ b/feature-proposal.html
@@ -18,7 +18,7 @@
     <div class="title">
       <b>Feature</b> proposal
     </div>
-    <form action="form-sent" name="Feature Proposal" netlify-honeypot="bot-field" netlify class="center-all">
+    <form name="Feature Proposal" netlify-honeypot="bot-field" netlify class="center-all">
       <div class="input">
         <label class="input__label" for="email">
           <span class="input__label-icon">
